continuing to update app.js file

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,7 +5,7 @@
     <title>ToDo list</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Today is <%=userDate%> which means it is a <%=weekDate%>.</h1>
     <p></p>
 </body>
 </html>
