Updated the EJS list file to use for.each loop, updated app.js to read the DB for list of items, and add additional items

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,13 +6,11 @@
     </div>
     
     <div class="box">
-        <% if (list.length >= 1) { %>
-            <% for(var i=0; i<list.length; i++) {%>
-                <div class="item">
-                    <input type="checkbox"><p><%= list[i]%></p>
-                </div>
-            <% } %>
-        <% } %>
+                <%list.forEach(function(list){ %>
+                    <div class="item">
+                        <input type="checkbox"><p><%= list.name%></p>
+                    </div>
+                <%});%>
 
         <form class="item" action="" method="post">
             <input autocomplete="off" type="text" name="toDoList" id="" placeholder="New Item">
