--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,9 +7,12 @@
     
     <div class="box">
                 <%list.forEach(function(list){ %>
-                    <div class="item">
-                        <input type="checkbox"><p><%= list.name%></p>
-                    </div>
+                    <form action="/delete" method="post">
+                        <div class="item">
+                            <input type="checkbox" name="checkBox" value="<%= list._id%>" onchange="this.form.submit()">
+                            <p><%= list.name%></p>
+                        </div>
+                    </form>
                 <%});%>
 
         <form class="item" action="" method="post">
